--- a/index.htm
+++ b/index.htm
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>  
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Magnet to Torrent Converter | Data March - Free Online Tool</title>
 
     <!-- SEO Meta Tags -->
-     <!--  -->
+
     <meta name="description"
         content="Free online tool to convert magnet links to torrent files. Fast, secure, and easy to use magnet URL to torrent converter by Data March. No registration required.">
     <meta name="keywords"
@@ -28,7 +27,7 @@
     <meta name="twitter:description" content="Free online magnet to torrent converter. Quick, easy, and secure.">
 
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://datamarch.com/magnet-to-torrent-converter">
+    <link rel="canonical" href="https://magnet-to-torrent.vercel.app/">
 
     <style>
         * {
